fix layout bugs v4

--- a/src/scss/_base/_theme.scss
+++ b/src/scss/_base/_theme.scss
@@ -1,11 +1,13 @@
 :root {
   --bg-color: radial-gradient(70.24% 70.24% at 49.87% 29.76%, rgba(19, 14, 0, .9) 0%, #000 100%);
   --text-color: #FCFBF7;
-  --pale-color: #918F8A;
+  --pale-color: #918f8a;
+  --pale-color-transparent: rgba(145, 143 ,138, .3);
   --img-filter: grayscale(1);
   --active-button: #FCFBF7;
 
   //BARS
+  --bright-column: radial-gradient(91.67% 122.17% at 69.17% -11.17%, #FFA300 0%, #2D1C00 100%);
   --bright-bar: radial-gradient(81.14% 100% at 50% 0%, #FFA300 0%, #2D1C00 100%);
   --base-bar: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .8) 100%), radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000 0%, #231900 .01%, #4D4D4D 100%);
   --shadow-bright-bar: inset -1px 1px 1px rgba(255, 255, 255, 0.4), inset 0 6px 15px rgba(255, 162, 0, 0.5);
@@ -45,10 +47,12 @@
   --bg-color: linear-gradient(#FFF, #FFF);
   --text-color: #261C00;
   --pale-color: #BFBFBF;
+  --pale-color-transparent: rgba(191, 191, 191, 0.3);
   --img-filter: none;
   --active-button: #F4B000;
 
   //BARS
+  --bright-column: linear-gradient(180deg, #FFF2D1 0.82%, #FFD66C 100%);
   --bright-bar: linear-gradient(180deg, #FFF2D1 .82%, #FFD66C 100%);
   --base-bar: linear-gradient(180deg, rgba(244, 244, 244, .9) .82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
   --shadow-bright-bar: inset 0 6px 15px 0 rgba(255, 176, 57, .8), inset -1px 1px 1px 0 rgba(255, 255, 255, .5);
