--- a/src/scss/_layouts/_diagram.scss
+++ b/src/scss/_layouts/_diagram.scss
@@ -15,7 +15,7 @@
   }
 
   @include minScreen(667px) {
-    padding: 0 42px 29px;
+    padding: 29px 42px;
   }
 
   @include minScreen(768px) {
@@ -90,19 +90,19 @@
 
   &__donut-segment {
     &:first-child {
-      filter: drop-shadow(0px 0px 20px -8px rgba(248, 158, 0, 0.2));
+      filter: drop-shadow(0px 0px 20px rgba(248, 158, 0, 0.2));
     }
 
     &:nth-child(2) {
-      filter: drop-shadow(0px 0px 20px -8px rgba(147, 93, 0, 0.2));
+      filter: drop-shadow(0px 0px 20px rgba(147, 93, 0, 0.2));
     }
 
     &:nth-child(3) {
-      filter: drop-shadow(0px 0px 20px -8px rgba(0, 0, 0, 0.2));
+      filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.2));
     }
 
     &:nth-child(4) {
-      filter: drop-shadow(0px 0px 20px -8px rgba(96, 96, 96, 0.2));
+      filter: drop-shadow(0px 0px 20px rgba(96, 96, 96, 0.2));
     }
 
     .theme_light &:first-child,
@@ -173,7 +173,7 @@
     &:not(:last-child) {
       padding-bottom: 10px;
       margin-bottom: 10px;
-      border-bottom: 2px solid var(--pale-color);
+      border-bottom: 2px solid var(--pale-color-transparent);
 
       @include minScreen(360px) {
         padding-bottom: 16px;
