--- a/src/scss/_layouts/_leaders.scss
+++ b/src/scss/_layouts/_leaders.scss
@@ -70,7 +70,7 @@
     text-align: center;
 
     &_bright {
-      background: var(--bright-bar);
+      background: var(--bright-column);
       box-shadow: var(--shadow-bright-bar);
     }
   }
